--- a/AdventOfCode2024.Tests/AdventOfCode2024.Tests.csproj
+++ b/AdventOfCode2024.Tests/AdventOfCode2024.Tests.csproj
@@ -55,6 +55,9 @@
       <None Update="Day13.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Day14.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
