--- a/AdventOfCode2024.Tests/AdventOfCode2024.Tests.csproj
+++ b/AdventOfCode2024.Tests/AdventOfCode2024.Tests.csproj
@@ -58,6 +58,9 @@
       <None Update="Day14.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Day15.txt">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
