--- a/AdventOfCode2024.Tests/AdventOfCode2024.Tests.csproj
+++ b/AdventOfCode2024.Tests/AdventOfCode2024.Tests.csproj
@@ -8,7 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="TUnit" Version="1.7.7" />
+        <PackageReference Include="AwesomeAssertions" Version="9.3.0" />
+        <PackageReference Include="TUnit" Version="1.12.3" />
     </ItemGroup>
 
     <ItemGroup>
